Login Flow Added.

--- a/home/src/main/res/navigation/home_navigation.xml
+++ b/home/src/main/res/navigation/home_navigation.xml
@@ -9,5 +9,7 @@
         android:id="@+id/homeFragment"
         android:name="com.voleti.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <argument android:name="data" app:argType="string" app:nullable="true" android:defaultValue=""/>
+    </fragment>
 </navigation>
