--- a/navigation/src/main/res/navigation/mobile_navigation.xml
+++ b/navigation/src/main/res/navigation/mobile_navigation.xml
@@ -2,17 +2,37 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/loginFragment"
+    android:id="@+id/mobile_navigation">
     <include app:graph="@navigation/notification_navigation" />
     <include app:graph="@navigation/home_navigation" />
     <include app:graph="@navigation/dashboard_navigation" />
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.voleti.login.LoginFragment"
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_navigation_home"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"
+            app:destination="@id/navigation_home" >
+            <argument android:name="data" app:argType="string" />
+        </action>
+    </fragment>
+
     <action android:id="@+id/action_to_details_fragment" app:destination="@id/detailsFragment"  >
         <argument
             android:name="myArg"
             app:argType="string"
             />
     </action>
+
+    <action
+        android:id="@+id/action_to_login_fragment"
+        app:destination="@id/loginFragment"
+        app:popUpTo="@id/mobile_navigation"
+        app:popUpToInclusive="false" />
+
     <fragment
         android:id="@+id/detailsFragment"
         android:name="com.voleti.details.DetailsFragment"
@@ -22,4 +42,5 @@
             app:argType="string"
              />
     </fragment>
+
 </navigation>
